times and function.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,56 @@
       <textarea class="col-10 PlanIt"></textarea>
       <button class="col-1 saveBtn">Save</button>
     </div>
+      <div class="row time-block" id="9">
+      <div class="col-1 hour">9 AM</div>
+      <textarea class="col-10 PlanIt"></textarea>
+      <button class="col-1 saveBtn">Save</button>
+    </div>
+        <div class="row time-block" id="10">
+          <div class="col-1 hour">10 AM</div>
+          <textarea class="col-10 PlanIt"></textarea>
+          <button class="col-1 saveBtn">Save</button>
+        </div>
+          <div class="row time-block" id="11">
+            <div class="col-1 hour">11 AM</div>
+            <textarea class="col-10 PlanIt"></textarea>
+            <button class="col-1 saveBtn">Save</button>
+          </div>
+            <div class="row time-block" id="12">
+              <div class="col-1 hour">12 PM</div>
+              <textarea class="col-10 PlanIt"></textarea>
+              <button class="col-1 saveBtn">Save</button>
+            </div>
+              <div class="row time-block" id="1">
+                <div class="col-1 hour">1 PM</div>
+                <textarea class="col-10 PlanIt"></textarea>
+                <button class="col-1 saveBtn">Save</button>
+              </div>
+                <div class="row time-block" id="2">
+                  <div class="col-1 hour">2 PM</div>
+                  <textarea class="col-10 PlanIt"></textarea>
+                  <button class="col-1 saveBtn">Save</button>
+                </div>
+                  <div class="row time-block" id="3">
+                    <div class="col-1 hour">3 PM</div>
+                    <textarea class="col-10 PlanIt"></textarea>
+                    <button class="col-1 saveBtn">Save</button>
+                  </div>
+                    <div class="row time-block" id="4">
+                      <div class="col-1 hour">4 PM</div>
+                      <textarea class="col-10 PlanIt"></textarea>
+                      <button class="col-1 saveBtn">Save</button>
+                    </div>
+                      <div class="row time-block" id="5">
+                        <div class="col-1 hour">5 PM</div>
+                        <textarea class="col-10 PlanIt"></textarea>
+                        <button class="col-1 saveBtn">Save</button>
+                      </div>
+                    </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./script.js"></script>
+                      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+                      <script src="./script.js"></script>
 </body>
 
 </html>
