--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <img src="./assets/images/PlanIt Logo.png"></img>
+  <img src="./assets/images/PlanIt-logo.png"></img>
   <header class="jumbotron">
     <h1 class="display-3">PlanIt Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
